# wayfire

./: .gitmodules  README.md  config.h.in  meson.build  meson_options.txt  wayfire-url-handler.desktop  wayfire.ini
docs/: wayfire-plugin-author.md  wayfire-plugin.md
ipc-scripts/: ipc-rules-demo.py
locale/: meson.build
man/: wayfire.1.in
metadata/: alpha.xml  animate.xml  autostart.xml  blur.xml  command.xml  core.xml  cube.xml  decoration.xml  expo.xml  ext-toplevel.xml  extra-gestures.xml  fast-switcher.xml  fisheye.xml  grid.xml  idle.xml  input.xml  invert.xml  ipc.xml  meson.build  move.xml  oswitch.xml  output.xml  place.xml  preserve-output.xml  resize.xml  scale-title-filter.xml  scale.xml  simple-tile.xml  switcher.xml  vswipe.xml  (+7 more)
plugins/: meson.build
plugins/animate/: animate.cpp  helix.hpp  meson.build  spin.hpp  squeezimize.hpp
plugins/animate/fire/: fire.cpp  fire.hpp  particle.cpp  particle.hpp
plugins/blur/: blur-base.cpp  blur.cpp  meson.build
plugins/common/: meson.build  move-drag-interface.cpp  workspace-wall.cpp
plugins/common/wayfire/plugins/common/: cairo-util.hpp  move-drag-interface.hpp  preview-indication.hpp  shared-core-data.hpp  util.hpp  workspace-stream-sharing.hpp  workspace-wall.hpp
plugins/cube/: cube.cpp  meson.build
plugins/decor/: deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-subsurface.hpp  deco-theme.cpp  decoration.cpp  meson.build
plugins/grid/: grid.cpp  meson.build
plugins/grid/wayfire/plugins/: crossfade.hpp  grid.hpp
plugins/ipc/: demo-ipc.cpp  ipc-activator.hpp  ipc-helpers.hpp  ipc-method-repository.hpp  ipc.cpp  ipc.hpp  meson.build  stipc.cpp
plugins/ipc-rules/: ipc-events.hpp  ipc-input-methods.hpp  ipc-rules-common.hpp  ipc-rules.cpp  ipc-utility-methods.hpp  meson.build
plugins/protocols/: ext-toplevel-list.cpp  ext-toplevel.cpp  foreign-toplevel.cpp  gtk-shell.cpp  gtk-shell.hpp  kde-appmenu.cpp  kde-appmenu.hpp  meson.build  session-lock.cpp  toplevel-management.hpp  wayfire-shell.cpp  xdg-activation.cpp
plugins/scale/: meson.build  scale-title-filter.cpp  scale-title-overlay.cpp  scale.cpp
plugins/single_plugins/: alpha.cpp  command.cpp  expo.cpp  fast-switcher.cpp  idle.cpp  ipc-rules.cpp  meson.build  move.cpp  oswitch.cpp  place.cpp  preserve-output.cpp  resize.cpp  switcher.cpp  test-plugin.cpp  vswipe-processing.hpp  vswipe.cpp  wsets.cpp  zoom.cpp
plugins/tile/: meson.build  tile-ipc.hpp  tile-plugin.cpp  tree-controller.cpp  tree.cpp  tree.hpp
plugins/vswitch/: meson.build  vswitch.cpp
plugins/vswitch/wayfire/plugins/: vswitch.hpp
plugins/window-rules/: lambda-rules-registration.hpp  meson.build  view-action-interface.cpp  view-action-interface.hpp  window-rules.cpp
plugins/wm-actions/: meson.build  wm-actions.cpp
plugins/wobbly/: meson.build  wobbly.cpp
test/misc/: meson.build
(+186 files in other folders)
